# CheckmateSample

./: .github:workflows:build-and_test-checkmate-sample.yml  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-create-dist.yml  main.yml  ruff.yml  test-pypi.yml  test.yml  toml_check.yml  version_check.yml
example_notebooks/: _version.py  dev.ipynb  example_notebook.ipynb
src/CheckmateSample/:  __init__.py  __init__.py  _version.py  generator.py
src/CheckmateSample.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/checkmate-sample/: generator.py
src/checkmate_sample/:  __init__.py  generator.py  update_toml.py
tests/: test_make_checkerboard.py
