[project]
name = "CheckmateSample"
version = "0.2.1"
description = "A sample project with checkerboard functionality"
authors = [
    {name = "Thomas Martin", email = "tmartin@ucar.edu"},
]
dependencies = [
    "numpy>=1.26.0",
    "xarray>=2023.8.0",
    "pytest>=7.4.0",
]
requires-python = ">=3.9"
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/CheckmateSample/_version.py"

[tool.pytest]
addopts = "--import-mode=importlib"
pythonpath = "src"

[project.urls]
Homepage = "https://github.com/ThomasMGeo/CheckmateSample"
