[project]
name = "CheckmateSample"
version = "0.2.3"
description = "A sample project with checkerboard functionality"
authors = [
    {name = "Thomas Martin", email = "tmartin@ucar.edu"},
]
dependencies = [
    "numpy>=1.26.0",
    "xarray>=2023.8.0",
]

requires-python = ">=3.9"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/CheckmateSample/_version.py"

[tool.pytest]
addopts = "--import-mode=importlib"
pythonpath = "src"

[project.urls]
Homepage = "https://github.com/ThomasMGeo/CheckmateSample"

[tool.ruff]
# Enable pycodestyle ('E') and Pyflakes ('F') codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9 (matching your project's requires-python).
target-version = "py39"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
