[project]
name = "CheckmateSample"

description = "A sample project with checkerboard functionality"
authors = [
    {name = "Thomas Martin", email = "tmartin@ucar.edu"},
]
dependencies = [
    "numpy>=1.26.0",
    "xarray>=2023.8.0"
]

requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.3",
    "setuptools_scm>=8.1",
]

[build-system]
requires = ["setuptools>=70.0", "setuptools_scm[toml]>=8.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.pytest]
addopts = "--import-mode=importlib"
pythonpath = "src"

[project.urls]
Homepage = "https://github.com/ThomasMGeo/CheckmateSample"

[tool.ruff]
# Enable pycodestyle ('E') and Pyflakes ('F') codes by default.
lint.select = ["E", "F"]
lint.ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".ipynb",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 61
